--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,4 @@
-Tap Board
-~~~~~~~~~~~~~~~
+= Tap Board
 
 An app for building simple touch-based tools. Use it at https://tap-board.5apps.com
 
@@ -7,28 +6,23 @@ image::screenshot.png[]
 
 Uses Web Components, Responsive Layout, etc. 
 
-Hosted version
-==============
+== Hosted version
 
 There is a hosted an up to date version here; https://tap-board.5apps.com
 
-
-Running under Apache / any static webserver
-===========================================
+== Running under Apache / any static webserver
 
 Simply serve this project directory as public html, with `index.html` as the
 entry point.
 
 
-Running with Node
-=================
+== Running with Node
 
 You can run this with node quite happily. Simply execute `node-http-server.js`
 under Linux, or run `node .` in the directory. Node that the app is fully
 static, and does not require node to function.
 
-Running on OpenShift
-====================
+== Running on OpenShift
 
 Works just fine with the [Node] S2I builder in OpenShift (tested with v4.2). If
 you want to select a builder, then "JS modern web app" should work.
